updated some tools to allow GET
